--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -1,11 +1,13 @@
 .container {
   max-width: 1120px;
-  margin: 0 auto;
+
   padding: 0 2rem;
+  margin: 0 auto;
 }
 
 .post {
   max-width: 720px;
+
   margin: 5rem auto 0;
 
   h1 {
@@ -15,15 +17,20 @@
 
   time {
     display: block;
-    font-size: 1rem;
+
     margin-top: 1.5rem;
+
+    font-size: 1rem;
+
     color: var(--gray-300);
   }
 
   .postContent {
     margin-top: 2rem;
-    line-height: 2rem;
+
     font-size: 1.125rem;
+    line-height: 2rem;
+
     color: var(--gray-100);
 
     p, ul {
@@ -36,6 +43,35 @@
       li {
         margin: 0.5rem 0;
       }
+    }
+
+    &.previewContent {
+      background: linear-gradient(var(--gray-100), transparent);
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+}
+
+.continueReading {
+  padding: 2rem;
+  margin: 4rem 0 2rem;
+
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-align: center;
+
+  border-radius: 100px;
+
+  background: var(--gray-850);
+
+  a {
+    margin-left: 0.5rem;
+
+    color: var(--yellow-500);
+
+    &:hover {
+      text-decoration: underline;
     }
   }
 }
