--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,7 +41,9 @@ input,
 textarea,
 select,
 button {
-  font: 400 1rem 'Roboto', sans-serif;
+  font:
+    400 1rem 'Roboto',
+    sans-serif;
 }
 
 button {
