--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -29,11 +33,6 @@
   html {
     font-size: 87.5%;
   }
-}
-
-body {
-  color: var(--white);
-  background: var(--gray-900);
 }
 
 body,
